<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        />

    <TextView
        android:id="@+id/text_Quiz_Top_Choise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/TextQuizTopChoise"
        android:textAlignment="center"
        android:textColor="@color/colorTextQuiz"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/languageSpinner"
        />

    <Button
        android:id="@+id/buttonQuizQuick"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="10sp"
        android:background="@color/colorButtonQuiz"
        android:text="@string/quiz_choise_rapide"
        android:textColor="@color/colorButtonTextWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Quiz_Top_Choise" />

    <TextView
        android:id="@+id/text_Quiz_Down_Choise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/TextQuizDownChoise"
        android:textAlignment="center"
        android:textColor="@color/colorTextQuiz"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonQuizQuick" />

    <Button
        android:id="@+id/buttonQuizPerso"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="10sp"
        android:textColor="@color/colorButtonTextWhite"
        android:background="@color/colorButtonQuiz"
        android:text="@string/quiz_choise_perso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Quiz_Down_Choise"
        />

    <TextView
        android:id="@+id/text_Quiz_Choise_Nb_Question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/TextQuizChoiseNbQuestion"
        android:textAlignment="center"
        android:textColor="@color/colorTextQuiz"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonQuizQuick"
        />

    <EditText
        android:id="@+id/NbQuestionEditText"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="10sp"
        android:ems="10"
        android:hint="@string/EnterNbWord"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_Quiz_Choise_Nb_Question"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/confirmAnswerButton"
        android:layout_width="83dp"
        android:layout_height="46dp"
        android:text="@string/valider"
        app:layout_constraintBottom_toBottomOf="@+id/NbQuestionEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/NbQuestionEditText"
        app:layout_constraintTop_toTopOf="@+id/NbQuestionEditText"
        app:layout_constraintVertical_bias="1.0"
        />

</androidx.constraintlayout.widget.ConstraintLayout>