<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/text_Insertion_Top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/TextFrançais"
        android:textColor="@color/colorTextInsertion"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" />

    <EditText
        android:id="@+id/wordSourceEditText"
        android:layout_width="0dp"
        android:layout_height="35sp"
        android:background="@drawable/edittext_border"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorTextInsertion"
        android:textColorHighlight="@color/colorTextIsertionHighLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_Insertion_Top"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/text_Insertion_Top"
        app:layout_constraintTop_toBottomOf="@+id/text_Insertion_Top"
        app:layout_constraintVertical_bias="0.058" />

    <TextView
        android:id="@+id/text_Insertion_Down"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:textColor="@color/colorTextInsertion"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordSourceEditText"
        app:layout_constraintVertical_bias="0.066" />

    <EditText
        android:id="@+id/wordTradEditText"
        android:layout_width="0dp"
        android:layout_height="35sp"
        android:background="@drawable/edittext_border"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/colorTextInsertion"
        android:textColorHighlight="@color/colorTextIsertionHighLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/text_Insertion_Down"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_Insertion_Down"
        app:layout_constraintTop_toBottomOf="@+id/text_Insertion_Down"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/insertWordButton"
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:layout_marginTop="36dp"
        android:background="@color/colorButtonIsertion"
        android:text="@string/TextInsertionButton"
        android:textColor="@color/colorButtonTextWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/wordTradEditText"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/wordTradEditText"
        app:layout_constraintTop_toBottomOf="@+id/wordTradEditText"
        app:layout_constraintVertical_bias="0.0" />
    <Button
        android:id="@+id/export_btn"
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:layout_marginTop="36dp"
        android:background="#069420"
        android:text="@string/exportText"
        android:textColor="@color/colorButtonTextWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/insertWordButton"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/insertWordButton"
        app:layout_constraintTop_toBottomOf="@+id/insertWordButton"
        app:layout_constraintVertical_bias="0.0" />
    <Button
        android:id="@+id/import_btn"
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:layout_marginTop="36dp"
        android:background="#177013"
        android:text="@string/importText"
        android:textColor="@color/colorButtonTextWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/export_btn"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/export_btn"
        app:layout_constraintTop_toBottomOf="@+id/export_btn"
        app:layout_constraintVertical_bias="0.0" />
    <Spinner
        android:id="@+id/insertLanguageSpinner"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/text_Insertion_Top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>